--- a/part_2_mars_weather.ipynb
+++ b/part_2_mars_weather.ipynb
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -15030,7 +15030,7 @@
    "source": [
     "# Extract all rows of data\n",
     "table_row_elements = soup.select(\"table.table > tbody > tr.data-row\")  # skips header row\n",
-    "print(table_row_elements)"
+    "print(table_row_elements[:20])"
    ]
   },
   {
